--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,26 +21,34 @@ dependencies:
       ref: dev_env
 
   auto_route: ^0.6.9
+  camera: ^0.8.1
   device_info: ^1.0.0
+  encrypt: ^4.1.0
   flutter_hooks: ^0.15.0
+  flutter_secure_storage: ^4.1.0
+  flutter_string_encryption: ^0.3.1
   flutter_svg: ^0.18.1
   fluttertoast: ^7.1.6
   file_picker: ^2.0.13
+  gallery_saver: ^2.0.3
   get_it: ^5.0.3
   google_fonts: ^1.1.2
   hive: ^1.4.4+1
   hive_flutter: ^0.3.1
   image_picker: ^0.6.7+22
   injectable: ^1.0.5
+  local_auth: ^0.6.3
   meta: ^1.2.4
   observable_ish: ^2.1.5
   package_info: ^0.4.3+2
   path_provider: ^1.6.24
   provider: ^4.3.2+3
+  rsa_encrypt: ^1.0.5
   stacked: ^1.7.6
   stacked_hooks: ^0.1.3+2
   stacked_themes: ^0.2.2+2
   url_launcher: ^5.7.10
+  video_player: ^2.1.0
 
 dev_dependencies:
   auto_route_generator: ^0.6.9
