--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: at_protocol_basics
+name: at_platform_files
 description: How to use the At Protocol
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
