--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.at_protocol_basics">
+    package="com.example.at_platform_files">
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
          In most cases you can leave this as-is, but you if you want to provide
@@ -15,7 +15,7 @@
     <uses-feature android:name="android.hardware.camera.flash" />
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="at_protocol_basics"
+        android:label="at_platform_files"
         android:icon="@mipmap/ic_launcher"
         android:requestLegacyExternalStorage="true">
         <activity
